--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "axios": "^0.20.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.3",
+    "final-form": "^4.20.1",
     "firebase": "^7.19.1",
     "js-cookie": "^2.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-final-form": "^6.5.1",
     "react-hook-form": "^6.7.0",
     "react-redux": "^7.2.1",
     "react-redux-firebase": "^3.7.0",
